line not showing on github for some reason might be fixed now

--- a/src/components/mail/_Mail.scss
+++ b/src/components/mail/_Mail.scss
@@ -28,9 +28,7 @@
     width: 1px;
     height: 90px;
     background-color: #a8b2d1;
-    &:hover {
-      background-color: #a8b2d1;
-    }
+    transition: none;
   }
 }
 @media (max-width: 1080px) {
